# openai-to-claude

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  README_zh.md  docker-compose.yml  main.py  pyproject.toml
config/: example.json
src/: __init__.py  main.py
src/api/: __init__.py  handlers.py  routes.py
src/api/middleware/: __init__.py  auth.py  timing.py
src/common/: __init__.py  logging.py  token_cache.py  token_counter.py
src/config/: __init__.py  settings.py  watcher.py
src/core/: __init__.py
src/core/clients/: __init__.py  openai_client.py
src/core/converters/: __init__.py  request_converter.py  response_converter.py  stream_converters.py
src/models/: __init__.py  anthropic.py  errors.py  openai.py
tests/: __init__.py  fixtures.py  test_models.py
tests/integration/: test_end_to_end.py  test_error_handling.py  test_health_endpoint.py  test_messages_endpoint.py  test_model_mapping_integration.py  test_streaming.py
